wp-blog-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  selector:
    matchLabels:
      app: wp
  replicas: 1        # tells deployment to run 2 pods matching the template
  template:          # create pods using pod definition in this template
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
