httpd-blog-service.yaml
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: httpd-service
spec:
  selector:
    app: httpd
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
