wp-blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp
spec:
  selector:
    app: wp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
