ingress-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
spec:
  ingressClassName: kong
  rules:
  - host: alend.awn.my.id
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: base-service
            port:
              number: 8080
      - path: /httpd
        pathType: Prefix
        backend:
          service:
            name: httpd-service
            port:
              number: 8080
      - path: /wp
        pathType: Prefix
        backend:           
          service:
            name: wp
            port:
              number: 8080
